kubeapps: bump chart version to 1.2.0

--- a/bitnami/kubeapps/templates/ingress.yaml
+++ b/bitnami/kubeapps/templates/ingress.yaml
@@ -9,6 +9,11 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   annotations:
+    {{- $rewrites := include "kubeapps.ingressRewrites" . -}}
+    {{- if ne $rewrites ""}}
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      {{ template "kubeapps.ingressRewrites" $ }}
+    {{- end -}}
     {{- if .Values.ingress.certManager }}
     kubernetes.io/tls-acme: "true"
     {{- end }}
