--- a/bitnami/kubeapps/templates/dashboard-config.yaml
+++ b/bitnami/kubeapps/templates/dashboard-config.yaml
@@ -17,10 +17,20 @@ data:
       gzip_static  on;
 
       location / {
+        # Support for ingress prefixes maintaining compatibility with the default /
+        # 1 - Exactly two fragment URLs for files existing inside of the public/ dir
+        # i.e /[prefix]/config.json => /config.json
+        rewrite ^/[^/]+/([^/]+)$ /$1 break;
+
+        # 2 - Any static files bundled by webpack referenced by 3 or more URL segments
+        # i.e /[prefix]/static/main.js => static/main.js
+        rewrite ^/[^/]+/static/(.*) /static/$1 break;
+
         try_files $uri /index.html;
       }
     }
   config.json: |-
     {
-      "namespace": "{{ .Release.Namespace }}"
+      "namespace": "{{ .Release.Namespace }}",
+      "appVersion": "{{ .Chart.AppVersion }}"
     }
