etcd: Allow non-default service domains
Provide a new configuration value -- `service.dnsBase` -- with a
sensible default that allows users to run this chart on clusters whose
internal service DNS domain for services is something other than
`svc.cluster.local`

--- a/bitnami/etcd/values-production.yaml
+++ b/bitnami/etcd/values-production.yaml
@@ -102,6 +102,7 @@ securityContext:
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
 ##
 service:
+  dnsBase: svc.cluster.local
   type: ClusterIP
   port: 2379
   ## Specify the nodePort value for the LoadBalancer and NodePort service types for the client port
