--- a/bitnami/kafka/values.yaml
+++ b/bitnami/kafka/values.yaml
@@ -174,6 +174,8 @@ securityContext:
 service:
   type: ClusterIP
   port: 9092
+  ## Service annotations done as key:value pairs
+  annotations:
 
 ## Kafka data Persistent Volume Storage Class
 ## If defined, storageClassName: <storageClass>
