--- a/bitnami/node/templates/deployment.yaml
+++ b/bitnami/node/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
         image: "{{ template "node.image" . }}"
         imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
         workingDir: /app
-        command: ['/bin/bash', '-c', 'useradd bitnami && chown -R bitnami:bitnami /app && npm install']
+        command: ['/bin/bash', '-c', '(getent passwd | grep "^bitnami:" -q || useradd bitnami) && chown -R bitnami:bitnami /app && npm install']
         volumeMounts:
         - name: app
           mountPath: /app
@@ -110,7 +110,7 @@ spec:
 {{ toYaml .Values.extraEnv | indent 8 }}
 {{- end }}
         workingDir: /app
-        command: ['/bin/bash', '-c', '(getent passwd | grep '^bitnami:' -q || useradd bitnami) && su bitnami -c "PATH=/opt/bitnami/node/bin:$PATH npm start"']
+        command: ['/bin/bash', '-c', '(getent passwd | grep "^bitnami:" -q || useradd bitnami) && su bitnami -c "PATH=/opt/bitnami/node/bin:$PATH npm start"']
         ports:
         - name: http
           containerPort: {{ .Values.applicationPort }}
