fix(templates/statefulset.yaml): dnsBase path
$dnsBase is being initialized as .Values.dnsBase but the right value is .Values.service.dnsBase.

--- a/bitnami/etcd/templates/statefulset.yaml
+++ b/bitnami/etcd/templates/statefulset.yaml
@@ -70,7 +70,7 @@ spec:
       {{- $etcdFullname := include "etcd.fullname" . }}
       {{- $releaseNamespace := .Release.Namespace }}
       {{- $etcdHeadlessServiceName := printf "%s-%s" $etcdFullname "headless" }}
-      {{- $dnsBase := .Values.dnsBase }}
+      {{- $dnsBase := .Values.service.dnsBase }}
       {{- $etcdPeerProtocol := include "etcd.peerProtocol" . }}
       {{- $etcdClientProtocol := include "etcd.clientProtocol" . }}
       - name: "{{ template "etcd.fullname" . }}"
