fix(bitnami/etcd): right path for existingSecret
The `statefulset.yaml` template was expecting `auth.existingSecret` but in the `values.yaml` and the documentation it asks for `auth.rbac.existingSecret`.

Fixes #1041.

--- a/bitnami/etcd/templates/statefulset.yaml
+++ b/bitnami/etcd/templates/statefulset.yaml
@@ -200,7 +200,7 @@ spec:
         - name: ETCD_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ if .Values.auth.existingSecret }}{{ .Values.auth.existingSecret }}{{ else }}{{ template "etcd.fullname" . }}{{ end }}
+              name: {{ if .Values.auth.rbac.existingSecret }}{{ .Values.auth.rbac.existingSecret }}{{ else }}{{ template "etcd.fullname" . }}{{ end }}
               key: etcd-root-password
         {{- end }}
 
