--- a/bitnami/mean/values.yaml
+++ b/bitnami/mean/values.yaml
@@ -29,6 +29,14 @@ git:
   tag: latest
   pullPolicy: IfNotPresent
 
+## Pod Security Context
+## ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+##
+securityContext:
+  enabled: true
+  fsGroup: 1001
+  runAsUser: 1001
+
 ## Git repository http/https
 ##
 repository:  https://github.com/bitnami/sample-mean.git
