add limits,afinity,nodeselector and tolerations for arbiter

--- a/upstreamed/mongodb/values-production.yaml
+++ b/upstreamed/mongodb/values-production.yaml
@@ -231,6 +231,34 @@ configmap:
 #    authorization: enabled
 #    keyFile: /opt/bitnami/mongodb/conf/keyfile
 
+
+## Arbiter related settings
+##
+arbiter:
+  ## Node selector
+  ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
+  nodeSelector: {}
+
+  ## Affinity
+  ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+  affinity: {}
+
+  ## Tolerations
+  ## ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
+  tolerations: []
+
+  ## Configure resource requests and limits
+  ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
+  ##
+  resources: {}
+  # limits:
+  #   cpu: 500m
+  #   memory: 512Mi
+  # requests:
+  #   cpu: 100m
+  #   memory: 256Mi
+
+
 ## Prometheus Exporter / Metrics
 ##
 metrics:
