--- a/upstreamed/mongodb/templates/statefulset-arbiter-rs.yaml
+++ b/upstreamed/mongodb/templates/statefulset-arbiter-rs.yaml
@@ -38,17 +38,17 @@ spec:
       securityContext:
         fsGroup: {{ .Values.securityContext.fsGroup }}
       {{- end }}
-      {{- if .Values.affinity }}
+      {{- if .Values.arbiter.affinity }}
       affinity:
-{{ toYaml .Values.affinity | indent 8 }}
+{{ toYaml .Values.arbiter.affinity | indent 8 }}
       {{- end -}}
-      {{- if .Values.nodeSelector }}
+      {{- if .Values.arbiter.nodeSelector }}
       nodeSelector:
-{{ toYaml .Values.nodeSelector | indent 8 }}
+{{ toYaml .Values.arbiter.nodeSelector | indent 8 }}
       {{- end }}
-      {{- if .Values.tolerations }}
+      {{- if .Values.arbiter.tolerations }}
       tolerations:
-{{ toYaml .Values.tolerations | indent 8 }}
+{{ toYaml .Values.arbiter.tolerations | indent 8 }}
       {{- end }}
       {{- if .Values.image.pullSecrets }}
       imagePullSecrets:
@@ -144,7 +144,7 @@ spec:
               subPath: mongodb.conf
           {{- end }}
           resources:
-{{ toYaml .Values.resources | indent 12 }}
+{{ toYaml .Values.arbiter.resources | indent 12 }}
       volumes:
       {{- if .Values.configmap }}
         - name: config
