--- a/bitnami/kubeapps/values.yaml
+++ b/bitnami/kubeapps/values.yaml
@@ -94,13 +94,13 @@ apprepository:
   replicaCount: 1
   image:
     registry: docker.io
-    repository: kubeapps/apprepository-controller
-    tag: v1.3.0
+    repository: bitnami/kubeapps-apprepository-controller
+    tag: 1.3.0
   # Image used to perform chart repository syncs
   syncImage:
-    registry: quay.io
-    repository: helmpack/chart-repo
-    tag: v1.4.0
+    registry: docker.io
+    repository: bitnami/kubeapps-chart-repo
+    tag: 1.4.0
   initialRepos:
   - name: stable
     url: https://kubernetes-charts.storage.googleapis.com
@@ -149,8 +149,8 @@ tillerProxy:
   replicaCount: 2
   image:
     registry: docker.io
-    repository: kubeapps/tiller-proxy
-    tag: v1.3.0
+    repository: bitnami/kubeapps-tiller-proxy
+    tag: 1.3.0
   service:
     port: 8080
   host: tiller-deploy.kube-system:44134
@@ -175,9 +175,9 @@ tillerProxy:
 chartsvc:
   replicaCount: 2
   image:
-    registry: quay.io
-    repository: helmpack/chartsvc
-    tag: v1.4.0
+    registry: docker.io
+    repository: bitnami/kubeapps-chartsvc
+    tag: 1.4.0
   service:
     port: 8080
   # https://github.com/kubeapps/kubeapps/issues/478#issuecomment-422979262
@@ -211,8 +211,8 @@ dashboard:
   replicaCount: 2
   image:
     registry: docker.io
-    repository: kubeapps/dashboard
-    tag: v1.3.0
+    repository: bitnami/kubeapps-dashboard
+    tag: 1.3.0
   service:
     port: 8080
   livenessProbe:
