--- a/bitnami/external-dns/Chart.yaml
+++ b/bitnami/external-dns/Chart.yaml
@@ -1,5 +1,6 @@
+apiVersion: v1
 name: external-dns
-version: 1.3.4
+version: 1.3.5
 appVersion: 0.5.11
 description: ExternalDNS is a Kubernetes addon that configures public DNS servers with information about exposed Kubernetes services to make them discoverable.
 keywords:
