--- a/bitnami/kafka/Chart.yaml
+++ b/bitnami/kafka/Chart.yaml
@@ -1,5 +1,6 @@
+apiVersion: v1
 name: kafka
-version: 1.4.0
+version: 1.4.1
 appVersion: 2.1.1
 description: Apache Kafka is a distributed streaming platform.
 keywords:
