--- a/bitnami/mysql/Chart.yaml
+++ b/bitnami/mysql/Chart.yaml
@@ -1,5 +1,6 @@
+apiVersion: v1
 name: mysql
-version: 4.2.5
+version: 4.2.6
 appVersion: 5.7.25
 description: Chart to create a Highly available MySQL cluster
 keywords:
