--- a/bitnami/node/Chart.yaml
+++ b/bitnami/node/Chart.yaml
@@ -1,5 +1,6 @@
+apiVersion: v1
 name: node
-version: 8.0.0
+version: 8.0.1
 appVersion: 8.15.0
 description: Event-driven I/O server-side JavaScript environment based on V8
 keywords:
