--- a/bitnami/tensorflow-inception/Chart.yaml
+++ b/bitnami/tensorflow-inception/Chart.yaml
@@ -1,5 +1,6 @@
+apiVersion: v1
 name: tensorflow-inception
-version: 3.2.7
+version: 3.2.8
 appVersion: 1.12.0
 description: Open-source software library for serving machine learning models
 keywords:
