--- a/bitnami/tensorflow-resnet/Chart.yaml
+++ b/bitnami/tensorflow-resnet/Chart.yaml
@@ -1,5 +1,6 @@
+apiVersion: v1
 name: tensorflow-resnet
-version: 0.0.4
+version: 0.0.5
 appVersion: 1.12.0
 description: Open-source software library serving the ResNet machine learning model.
 keywords:
