--- a/bitnami/kafka/templates/statefulset.yaml
+++ b/bitnami/kafka/templates/statefulset.yaml
@@ -156,7 +156,7 @@ spec:
         - name: KAFKA_LOG_RETENTION_HOURS
           value: {{ .Values.logRetentionHours | quote }}
         - name: KAFKA_LOG_MESSAGE_FORMAT_VERSION
-          value: {{ .Values.logMessageFormatVersion | replace "_" "" | quote }}
+          value: {{ .Values.logMessageFormatVersion | quote }}
         - name: KAFKA_MAX_MESSAGE_BYTES
           value: {{ .Values.maxMessageBytes | replace "_" "" | quote }}
         - name: KAFKA_SEGMENT_BYTES
