Add a metrics svc to be able to scrape with prometheus-operator
The additional label app.kubernetes.io/component can separate the exporter
pod from the statefulset ones when used in the svc. There was no change for
the existing labels in order to make it smooth for upgrades. That's why in
the exporter deploy/spec/selector the new label is not added.

--- a/bitnami/zookeeper/templates/metrics-deployment.yaml
+++ b/bitnami/zookeeper/templates/metrics-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     chart: {{ template "zookeeper.chart" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+    app.kubernetes.io/component: {{ template "zookeeper.name" . }}-metrics
 spec:
   replicas: 1
   selector:
@@ -21,6 +22,7 @@ spec:
       labels:
         app: {{ template "zookeeper.name" . }}
         release: "{{ .Release.Name }}"
+        app.kubernetes.io/component: {{ template "zookeeper.name" . }}-metrics
     spec:
       {{- if .Values.metrics.image.pullSecrets }}
       imagePullSecrets:
@@ -43,7 +45,8 @@ spec:
           {{- $zookeeperHeadlessServiceName := printf "%s-%s" $zookeeperFullname "headless" | trunc 63  }}
           - {{range $i, $e := until $replicaCount }}{{ $zookeeperFullname }}-{{ $e }}.{{ $zookeeperHeadlessServiceName }}.{{ $releaseNamespace }}.svc.cluster.local:{{ $servicePort }}{{- if (lt $e ( sub $replicaCount 1)) -}},{{- end -}}{{ end }}
         ports:
-          - containerPort: 8080
+          - name: metrics
+            containerPort: 8080
         resources:
 {{ toYaml .Values.metrics.resources | indent 10 }}
 {{- end }}
