Get rid of useConfigMap missing value

--- a/bitnami/etcd/templates/statefulset.yaml
+++ b/bitnami/etcd/templates/statefulset.yaml
@@ -138,7 +138,7 @@ spec:
               fi
             fi
 
-            {{- if .Values.useConfigmap }}
+            {{- if .Values.configFileConfigMap }}
             exec /opt/bitnami/etcd/bin/etcd --config-file /opt/bitnami/etcd/conf/etcd.conf.yml
             {{ else }}
             exec /opt/bitnami/etcd/bin/etcd
