Complete imageRegisty example
Signed-off-by: juan131 <juan@bitnami.com>

--- a/bitnami/apache/values.yaml
+++ b/bitnami/apache/values.yaml
@@ -3,7 +3,7 @@
 ## Current available global Docker image parameters: imageRegistry and imagepullSecrets
 ##
 # global:
-#   imageRegistry:
+#   imageRegistry: myRegistryMame
 #   imagePullSecrets:
 #     - myRegistryKeySecretName
 
