[bitnami/external-dns] Add global imagePullSecrets to overwrite any other existing one

--- a/bitnami/external-dns/templates/deployment.yaml
+++ b/bitnami/external-dns/templates/deployment.yaml
@@ -31,12 +31,7 @@ spec:
 {{- end }}
 {{- end }}
     spec:
-      {{- if .Values.image.pullSecrets }}
-      imagePullSecrets:
-      {{- range $sec := .Values.image.pullSecrets }}
-        - name: {{$sec | quote }}
-      {{- end }}
-      {{- end }}
+{{- include "external-dns.imagePullSecrets" . | indent 6 }}
       {{- if .Values.securityContext.enabled }}
       securityContext:
         fsGroup: {{ .Values.securityContext.fsGroup }}
