kubeapps: bump chart version to 1.6.0

--- a/bitnami/kubeapps/templates/kubeapps-frontend-deployment.yaml
+++ b/bitnami/kubeapps/templates/kubeapps-frontend-deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app: {{ template "kubeapps.fullname" . }}
         release: {{ .Release.Name }}
     spec:
+{{- include "kubeapps.imagePullSecrets" . | indent 6 }}
       containers:
       - name: nginx
         image: {{ template "kubeapps.image" (list .Values.frontend.image .Values.global) }}
