--- a/bitnami/kubeapps/templates/mongodb-jobs-cleanup.yaml
+++ b/bitnami/kubeapps/templates/mongodb-jobs-cleanup.yaml
@@ -17,6 +17,7 @@ spec:
         app: {{ template "kubeapps.mongodb-jobs-cleanup.fullname" . }}
         release: {{ .Release.Name }}
     spec:
+{{- include "kubeapps.imagePullSecrets" . | indent 6 }}
       containers:
       - name: kubectl
         image: {{ template "kubeapps.image" (list .Values.hooks.image .Values.global) }}
