--- a/bitnami/kubeapps/templates/dashboard-deployment.yaml
+++ b/bitnami/kubeapps/templates/dashboard-deployment.yaml
@@ -21,6 +21,7 @@ spec:
         app: {{ template "kubeapps.dashboard.fullname" . }}
         release: {{ .Release.Name }}
     spec:
+{{- include "kubeapps.imagePullSecrets" . | indent 6 }}
       containers:
       - name: dashboard
         image: {{ template "kubeapps.image" (list .Values.dashboard.image .Values.global) }}
