--- a/bitnami/node/values.yaml
+++ b/bitnami/node/values.yaml
@@ -34,6 +34,12 @@ git:
   repository: bitnami/git
   tag: latest
   pullPolicy: IfNotPresent
+  ## Optionally specify an array of imagePullSecrets.
+  ## Secrets must be manually created in the namespace.
+  ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+  ##
+  # pullSecrets:
+  #   - myRegistryKeySecretName
 
 ## Git repository http/https
 ##
