--- a/bitnami/consul/templates/statefulset.yaml
+++ b/bitnami/consul/templates/statefulset.yaml
@@ -186,7 +186,7 @@ spec:
         {{ end }}
       {{- if .Values.metrics.enabled }}
       - name: metrics
-        image: "{{ template "metrics.image" . }}"
+        image: "{{ template "consul.metrics.image" . }}"
         imagePullPolicy: {{ .Values.metrics.image.pullPolicy | quote }}
         env:
         command: [ '/bin/consul_exporter' , '--consul.server={{ template "consul.fullname" . }}:{{ .Values.port }}']
