Manage disruptions when using more than 1 replicas
Created a pod distruption budget when replicas is bigger than 1
By default only 1 pod can be unavailable
Added additional label so the pdb doesn't select the metrics pod

--- a/bitnami/zookeeper/values-production.yaml
+++ b/bitnami/zookeeper/values-production.yaml
@@ -36,6 +36,14 @@ image:
 ##
 updateStrategy: RollingUpdate
 
+
+## Limits the number of pods of the replicated application that are down simultaneously from voluntary disruptions
+## ref: https://kubernetes.io/docs/concepts/workloads/pods/disruptions
+##
+podDisruptionBudget:
+  maxUnavailable: 1  
+
+
 ## Partition update strategy
 ## https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#partitions
 ##
